# engagement-prediction

./: .gitignore  AGENTS.md  README.md  cli.py  compare.py  conda-lock.ci.yml  conda-lock.yml  config_test.yml  environment.ci.yml  environment.yml  pipeline_summary.md  pyproject.toml  run_training_sweep.sh  sweep_results.csv  sweep_results_debug.csv
ai_notes/: CLEARML_SWEEP_GUIDE.md  EARLY_FILTERING_IMPROVEMENT.md
configs/: data_sweep.yml  data_sweep_supplement.yml  data_sweep_unified.yml
docs/: pipeline_diagram.dot  pipeline_diagram.html  pipeline_diagram.md  pipeline_diagram.mmd  pipeline_diagram.txt
inference_service/: .dockerignore  .env.example  Dockerfile  Dockerfile.gpu  README.md  app.py  build_image.sh  clearml.env.template  deploy.sh  gcp_setup.sh  model_promotion.py  requirements.txt
manual_data/: SCHEMA_COMPATIBILITY_REPORT.md  inspect_schema.py  schema_report.json
model_serving/: __init__.py  input_data_helpers.py  preprocess_mlp.py  preprocess_two_tower.py  preprocess_user.py
ops/: compare_bucket_coverage.py  evaluate_two_tower_retrieval_authors.py
scripts/: bst_torchscript_matrix_smoke.py  export_sweep_results.py  fit_memory_model.py  gcp_setup.sh  mem_sidecar.sh  n1_t4_zones.txt  recover_inferences.py  retry-gpu-zones.sh  run_data_sweep.py  run_holdout_pred.py  run_sweep_eval.py
serving/: create_clearml_triton_and_up.sh  hit_inference_endpoint_example.py  hit_inference_endpoint_example_post.py  hit_inference_endpoint_example_user.py  preprocess_mlp.py  preprocess_two_tower.py  preprocess_user.py
serving_examples/: README.md  (+8 more)
(+90 files in other folders)
