# This repo primarily uses conda (see `environment.yml`) for reproducible environments.
# This `pyproject.toml` exists to make the lightweight `shared` helpers pip-installable if desired.

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Reusable shared helpers from the engagement-prediction repo."
requires-python = ">=3.11"
dependencies = ["numpy>=1.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

